Changelog
=========

2.3 - UNRELEASED
----------------

- addTranslation now returns the newly created translation.
  [wichert]

- Include the FAQ in the package description.
  [wichert]

- Refactor addTranslation: introduce adapters to determine where
  a translation should be created and to create the translation. 
  [wichert]


2.2 - July 22, 2008
-------------------

- LanguageIndependent fields are now shown in view mode for the translations,
  so they no longer are editable from the translations, which is how it's
  documented to behave. [regebro]

- Made the upgrade step also work on Plone 3 (GenericSetup 1.3).
  [maurits]

- Registered GenericSetup upgrade step to get rid of an old
  linguaplone_various import step.  I registered it for upgrading
  from 2.0 to 2.1 as that was when this import step was removed.  It
  is always available in portal_setup/manage_upgrades in the ZMI.
  [maurits]

- When going to the canonical translation, also switch to that
  language.  [maurits]

- On the manage_translations page do not show the form for linking to
  other content or deleting/unlinking existing translations when the
  current context is not the canonical language.  Instead add a url to
  that canonical language.  [maurits]

- When adding a translation, do not throw an error when the language
  does not exist, but display that as info and go to that existing
  translation.  I saw the 'add translation' option still for an
  already translated language, due to some caching.  [maurits]

- Ignore back reference when it is None.  [maurits]

- Made sure that an existing FieldIndex Language gets correctly
  replaced by our wanted LanguageIndex, instead of leaving an unusable
  index with an empty indexable attribute.  [maurits]

- Check if plone.browserlayer is installed before starting a possibly
  long reindex that would then be aborted.  [maurits]

- Make tests run on Plone 3.0.6 with plone.browserlayer 1.0rc3 and